# lazycloud

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  architecture.md  cliff.toml  deny.toml  release-plz.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/lazycloud-core/: Cargo.toml
crates/lazycloud-core/src/: lib.rs
crates/lazycloud-tui/: Cargo.toml
crates/lazycloud-tui/src/: main.rs
src/: action.rs  app.rs  cli.rs  command.rs  commands.rs  components.rs  config.rs  context.rs  core.rs  main.rs  model.rs  provider.rs  registry.rs  screen.rs  search.rs  service.rs  theme.rs  tui.rs  ui.rs  view.rs  widget.rs  widgets.rs
src/commands/: clipboard.rs
src/component/: command_status.rs  confirm_dialog.rs  context_selector.rs  error_dialog.rs  help.rs  list.rs  mod.rs  service_selector.rs  spinner.rs  status_bar.rs  table.rs  text_input.rs  theme_selector.rs  toast.rs
src/components/: command_status.rs  confirm_dialog.rs  context_select.rs  context_selector.rs  error_dialog.rs  help.rs  list.rs  service_select.rs  service_selector.rs  services.rs  spinner.rs  status.rs  status_bar.rs  table.rs  text_input.rs  theme_selector.rs  toast.rs
src/components/services/: gcp.rs  secret_manager.rs
src/components/services/gcp/: secret_manager.rs
src/config/: actions.rs  defaults.rs  key.rs  keybindings.rs  loader.rs  mod.rs  resolver.rs
src/core/: command.rs  event.rs  message.rs  service.rs  tui.rs
src/core/command/: clipboard.rs  env.rs
src/model/: context.rs  provider.rs
src/provider/: gcp.rs
src/provider/gcp/: config.rs  context.rs  secret_manager.rs
src/registry/: service_id.rs  service_provider.rs  service_registry.rs
src/screen/: context_selector.rs  service_selector.rs
src/ui/: command_panel.rs  component.rs  components.rs  error_dialog.rs  help.rs  mod.rs  modal.rs  screen.rs  status_bar.rs  toast.rs
src/ui/components/: confirm_dialog.rs  list.rs  table.rs  text_input.rs
src/ui/widgets/: spinner.rs
src/view/: command_status.rs  confirm_dialog.rs  context_selector.rs  help.rs  list.rs  service_selector.rs  spinner.rs  status_bar.rs  table.rs  text_input.rs  theme_selector.rs
src/widget/: command_status.rs  help_overlay.rs  select_list.rs  select_table.rs  spinner.rs  status_bar.rs  theme_selector.rs
src/widgets/: loader.rs  spinner.rs
(+18 files in other folders)
