[package]
name = "lazycloud"
edition = "2024"
resolver = "3"

[dependencies]
color-eyre = "0.6.5"
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
futures = "0.3.31"
signal-hook = "0.4.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
google-cloud-secretmanager-v1 = "1.2.0"
throbber-widgets-tui = "0.10.0"
