[package]
name = "lazycloud"
version = "0.1.0"
description = "A terminal UI for various cloud provider CLIs"
authors = ["Jorge Paravicini"]
edition = "2024"
resolver = "3"

[dependencies]
color-eyre = "0.6.5"
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
futures = "0.3.31"
signal-hook = "0.4.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serini = "0.2.2"
google-cloud-secretmanager-v1 = "1.2.0"
google-cloud-auth = "1.3.0"
google-cloud-wkt = "1.2.0"
throbber-widgets-tui = "0.10.0"
async-trait = "0.1.89"
arboard = "3.6.1"
chrono = "0.4"
catppuccin = "2.4"
dirs = "6.0"
fuzzy-matcher = "0.3"
toml = "0.9.8"
clap = { version = "4", features = ["derive"] }

[lints.rust]
warnings = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -3 }
